test/equality/negative/wrong_arg_number.mli
val f : int -> int -> int -> bool
(*@ equality *)
